# Xray-core

./: .gitignore  AGENTS.md  CLAUDE.md  Taskfile.yaml  build.sh  go.mod  go.sum  mise.toml  race_detect_norace_test.go  race_detect_test.go  security_audit_poc_test.go  security_audit_round2_test.go
core/: config.go  config_limit_test.go  functions.go  mocks.go  xray.go
docs/: acceleration-pipeline-roi-audit-2026-03-19.md  acceleration-status-report-gpt-5.4-xhigh-agent-behavior-analysis-2026-04-01.md  agent-failure-mode-dns-acceleration-2026-03-04.md  gpt-agent-failure-mode-analysis-2026-03-16.md  loopback-native-reality-best-practice-2026-03-24.md  native-reality-failure-genealogy-2026-03-19.md  native-reality-layer1-archive-2026-03-14.md  post-detach-sockmap-latency-plan-2026-03-26.md  vision-pipeline-walkthrough-2026-03-19.md
main/: default.pgo  run.go  run_confdir_test.go
proxy/: capabilities.go  deadline.go  deadline_test.go  fallback_accel.go  fallback_accel_test.go  proxy.go  proxy_bench_test.go  proxy_cryptorand_test.go  proxy_logging_test.go  proxy_native_helper_parity_test.go  proxy_test.go  (+8 more)
rust/xray-ebpf/: Cargo.toml  rust-toolchain.toml
rust/xray-ebpf/.cargo/: config.toml
rust/xray-ebpf/src/: main.rs  maps.rs  sk_msg_cork_only.rs  sk_msg_verdict.rs  sk_skb_parser.rs  sk_skb_verdict.rs
rust/xray-rust/: Cargo.toml  build.rs  cbindgen.toml
rust/xray-rust/src/: aead.rs  blake3_ffi.rs  ebpf.rs  ebpf_stub.rs  fdutil.rs  ffi.rs  geodata.rs  geoip.rs  ktls_probe.rs  lib.rs  mph.rs  pipeline.rs  reality.rs  tls.rs  tls13.rs  vision.rs  vmess.rs
(+351 files in other folders)
