[package]
name = "xray-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
# Phase 1: rustls TLS (ring backend for static linking portability)
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pki-types = { version = "1", features = ["std"] }
rustls-native-certs = "0.8"
webpki-roots = "1"
ring = "0.17"

# Phase 2: TLS 1.3 engine + REALITY
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hmac = "0.12"
ed25519-dalek = { version = "2", features = ["hazmat"] }

# Security
zeroize = { version = "1", features = ["derive"] }
subtle = "2"

# Accelerated matchers + hashing
blake3 = "1"
aho-corasick = "1"
ahash = "0.8"
getrandom = "0.3"

# eBPF userspace (Aya loader for sockmap + pinned maps)
aya = { version = "0.13", optional = true }

# Geodata
memmap2 = "0.9"

# System
libc = "0.2"

[features]
default = []
ebpf-bytecode = ["aya"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "unwind"
